LPD-56702 - Get rid of SPAHelper
IMHO it was only adding noise as everything can be moved to
SPATopHeadJSPDynamicInclude and implemented as functions of the request
state.