@@ -6,7 +6,10 @@
 package com.liferay.frontend.js.spa.web.internal.servlet.taglib;
 
 import com.liferay.frontend.js.loader.modules.extender.esm.ESImportUtil;
-import com.liferay.frontend.js.spa.web.internal.servlet.taglib.helper.SPAHelper;
+import com.liferay.frontend.js.spa.web.internal.configuration.SPAConfiguration;
+import com.liferay.osgi.util.StringPlus;
+import com.liferay.petra.string.StringPool;
+import com.liferay.portal.configuration.metatype.bnd.util.ConfigurableUtil;
 import com.liferay.portal.configuration.module.configuration.ConfigurationProvider;
 import com.liferay.portal.kernel.json.JSONArray;
 import com.liferay.portal.kernel.json.JSONFactory;
@@ -14,14 +17,27 @@ import com.liferay.portal.kernel.json.JSONObject;
 import com.liferay.portal.kernel.json.JSONUtil;
 import com.liferay.portal.kernel.language.Language;
 import com.liferay.portal.kernel.log.Log;
+import com.liferay.portal.kernel.log.LogFactoryUtil;
+import com.liferay.portal.kernel.module.configuration.ConfigurationException;
+import com.liferay.portal.kernel.resource.bundle.ResourceBundleLoader;
+import com.liferay.portal.kernel.resource.bundle.ResourceBundleLoaderUtil;
 import com.liferay.portal.kernel.service.PortletLocalService;
+import com.liferay.portal.kernel.servlet.ServletResponseConstants;
 import com.liferay.portal.kernel.servlet.taglib.BaseJSPDynamicInclude;
 import com.liferay.portal.kernel.servlet.taglib.DynamicInclude;
 import com.liferay.portal.kernel.servlet.taglib.aui.JSFragment;
 import com.liferay.portal.kernel.servlet.taglib.aui.ScriptData;
 import com.liferay.portal.kernel.theme.ThemeDisplay;
+import com.liferay.portal.kernel.util.ArrayUtil;
+import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.HtmlUtil;
+import com.liferay.portal.kernel.util.ListUtil;
+import com.liferay.portal.kernel.util.ParamUtil;
 import com.liferay.portal.kernel.util.Portal;
+import com.liferay.portal.kernel.util.PortletKeys;
+import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.PropsUtil;
+import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.kernel.util.WebKeys;
 import com.liferay.portal.url.builder.AbsolutePortalURLBuilder;
 import com.liferay.portal.url.builder.AbsolutePortalURLBuilderFactory;
@@ -29,13 +45,32 @@ import com.liferay.portal.url.builder.AbsolutePortalURLBuilderFactory;
 import jakarta.servlet.ServletContext;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
 import java.io.IOException;
 
-import java.util.Arrays;
+import java.lang.reflect.Field;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.ResourceBundle;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
+
+import org.osgi.framework.BundleContext;
+import org.osgi.framework.Filter;
+import org.osgi.framework.InvalidSyntaxException;
+import org.osgi.framework.ServiceReference;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Deactivate;
 import org.osgi.service.component.annotations.Reference;
+import org.osgi.util.tracker.ServiceTracker;
+import org.osgi.util.tracker.ServiceTrackerCustomizer;
 
 /**
  * @author Bruno Basto
@@ -53,16 +88,14 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 			(ThemeDisplay)httpServletRequest.getAttribute(
 				WebKeys.THEME_DISPLAY);
 
-		SPAHelper spaHelper = new SPAHelper(
-			_portal.getCompanyId(httpServletRequest), _configurationProvider,
-			_jsonFactory, _portal, _portletLocalService);
+		SPAConfiguration spaConfiguration = _getSPAConfiguration(themeDisplay);
 
-		if (!spaHelper.isEnabled()) {
+		if (!spaConfiguration.enabled()) {
 			return;
 		}
 
-		JSONArray excludedPathsJSONArray =
-			spaHelper.getExcludedPathsJSONArray();
+		JSONArray excludedPathsJSONArray = _getExcludedPathsJSONArray(
+			spaConfiguration);
 
 		String currentURL = _portal.getCurrentURL(httpServletRequest);
 
@@ -72,51 +105,47 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 			}
 		}
 
+		ResourceBundle resourceBundle = _getLanguageResourceBundle(
+			"frontend-js-spa-web", themeDisplay.getLocale());
+
 		JSONObject configJSONObject = JSONUtil.put(
-			"cacheExpirationTime", spaHelper.getCacheExpirationTime()
+			"cacheExpirationTime", spaConfiguration.cacheExpirationTime()
 		).put(
 			"clearScreensCache",
-			spaHelper.isClearScreensCache(
+			_isClearScreensCache(
 				httpServletRequest, httpServletRequest.getSession())
 		).put(
-			"debugEnabled", spaHelper.isDebugEnabled()
+			"debugEnabled", _log.isDebugEnabled()
 		).put(
 			"excludedPaths", excludedPathsJSONArray
 		).put(
-			"excludedTargetPortlets",
-			spaHelper.getExcludedTargetPortletsJSONArray()
+			"excludedTargetPortlets", _getExcludedTargetPortletsJSONArray()
 		).put(
-			"loginRedirect",
-			HtmlUtil.escapeJS(spaHelper.getLoginRedirect(httpServletRequest))
+			"loginRedirect", _getLoginRedirect(httpServletRequest)
 		).put(
 			"navigationExceptionSelectors",
-			spaHelper.getNavigationExceptionSelectors()
+			_getNavigationExceptionSelectors(spaConfiguration)
 		).put(
 			"portletsBlacklist",
-			spaHelper.getPortletsBlacklistJSONArray(themeDisplay)
+			_getPortletsBlacklistJSONArray(themeDisplay.getCompanyId())
 		).put(
-			"preloadCSS", spaHelper.isPreloadCSS()
+			"preloadCSS", spaConfiguration.preloadCSS()
 		).put(
-			"requestTimeout", spaHelper.getRequestTimeout()
+			"requestTimeout", spaConfiguration.requestTimeout()
 		).put(
 			"userNotification",
 			JSONUtil.put(
 				"message",
 				_language.get(
-					spaHelper.getLanguageResourceBundle(
-						"frontend-js-spa-web", themeDisplay.getLocale()),
+					resourceBundle,
 					"it-looks-like-this-is-taking-longer-than-expected")
 			).put(
-				"timeout", spaHelper.getUserNotificationTimeout()
+				"timeout", spaConfiguration.userNotificationTimeout()
 			).put(
-				"title",
-				_language.get(
-					spaHelper.getLanguageResourceBundle(
-						"frontend-js-spa-web", themeDisplay.getLocale()),
-					"oops")
+				"title", _language.get(resourceBundle, "oops")
 			)
 		).put(
-			"validStatusCodes", spaHelper.getValidStatusCodesJSONArray()
+			"validStatusCodes", _validStatusCodesJSONArray
 		);
 
 		ScriptData initScriptData = new ScriptData();
@@ -129,7 +158,7 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 			null,
 			new JSFragment(
 				"init(" + configJSONObject.toString() + ");",
-				Arrays.asList(
+				List.of(
 					ESImportUtil.getESImport(
 						absolutePortalURLBuilder,
 						"{init} from frontend-js-spa-web"))));
@@ -141,6 +170,45 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 	public void register(DynamicIncludeRegistry dynamicIncludeRegistry) {
 		dynamicIncludeRegistry.register(
 			"/html/common/themes/top_head.jsp#post");
+	}
+
+	@Activate
+	protected void activate(BundleContext bundleContext) {
+		String portletNamespace = _portal.getPortletNamespace(
+			PropsUtil.get(PropsKeys.AUTH_LOGIN_PORTLET_NAME));
+
+		_redirectParamName = portletNamespace.concat("redirect");
+
+		_validStatusCodesJSONArray = _jsonFactory.createJSONArray();
+
+		Class<?> clazz = ServletResponseConstants.class;
+
+		for (Field field : clazz.getDeclaredFields()) {
+			try {
+				_validStatusCodesJSONArray.put(field.getInt(null));
+			}
+			catch (Exception exception) {
+				if (_log.isDebugEnabled()) {
+					_log.debug(exception);
+				}
+			}
+		}
+
+		_globalNavigationExceptionSelectors = new CopyOnWriteArrayList<>();
+
+		_navigationExceptionSelectorTracker =
+			_getNavigationExceptionSelectorTracker(bundleContext);
+
+		_navigationExceptionSelectorTracker.open();
+	}
+
+	@Deactivate
+	protected void deactivate() {
+		if (_navigationExceptionSelectorTracker != null) {
+			_navigationExceptionSelectorTracker.close();
+		}
+
+		_navigationExceptionSelectorTracker = null;
 	}
 
 	@Override
@@ -158,11 +226,213 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 		return null;
 	}
 
+	private JSONArray _getExcludedPathsJSONArray(
+		SPAConfiguration spaConfiguration) {
+
+		JSONArray jsonArray = _jsonFactory.createJSONArray();
+
+		for (String excludedPath : _SPA_DEFAULT_EXCLUDED_PATHS) {
+			jsonArray.put(_portal.getPathContext() + excludedPath);
+		}
+
+		String[] customExcludedPaths = spaConfiguration.customExcludedPaths();
+
+		if (ArrayUtil.isEmpty(customExcludedPaths)) {
+			return jsonArray;
+		}
+
+		for (String customExcludedPath : customExcludedPaths) {
+			jsonArray.put(_portal.getPathContext() + customExcludedPath);
+		}
+
+		return jsonArray;
+	}
+
+	private JSONArray _getExcludedTargetPortletsJSONArray() {
+		return _jsonFactory.createJSONArray(
+			new String[] {PortletKeys.USERS_ADMIN, PortletKeys.SERVER_ADMIN});
+	}
+
+	private ResourceBundle _getLanguageResourceBundle(
+		String servletContextName, Locale locale) {
+
+		ResourceBundleLoader resourceBundleLoader =
+			ResourceBundleLoaderUtil.
+				getResourceBundleLoaderByServletContextName(servletContextName);
+
+		if (resourceBundleLoader == null) {
+			resourceBundleLoader =
+				ResourceBundleLoaderUtil.getPortalResourceBundleLoader();
+		}
+
+		return resourceBundleLoader.loadResourceBundle(locale);
+	}
+
+	private String _getLoginRedirect(HttpServletRequest httpServletRequest) {
+		return HtmlUtil.escapeJS(
+			ParamUtil.getString(httpServletRequest, _redirectParamName));
+	}
+
+	private String _getNavigationExceptionSelectors(
+		SPAConfiguration spaConfiguration) {
+
+		List<String> navigationExceptionSelectors = new ArrayList<>();
+
+		navigationExceptionSelectors.addAll(
+			_globalNavigationExceptionSelectors);
+
+		Collections.addAll(
+			navigationExceptionSelectors,
+			spaConfiguration.navigationExceptionSelectors());
+
+		return ListUtil.toString(
+			navigationExceptionSelectors, (String)null, StringPool.BLANK);
+	}
+
+	private ServiceTracker<Object, Object>
+		_getNavigationExceptionSelectorTracker(BundleContext bundleContext) {
+
+		Filter filter;
+
+		try {
+			filter = bundleContext.createFilter(
+				"(&(objectClass=java.lang.Object)(" +
+					_SPA_NAVIGATION_EXCEPTION_SELECTOR_KEY + "=*))");
+		}
+		catch (InvalidSyntaxException invalidSyntaxException) {
+			throw new RuntimeException(invalidSyntaxException);
+		}
+
+		return new ServiceTracker<>(
+			bundleContext, filter,
+			new ServiceTrackerCustomizer<>() {
+
+				@Override
+				public Object addingService(
+					ServiceReference<Object> serviceReference) {
+
+					_globalNavigationExceptionSelectors.addAll(
+						StringPlus.asList(
+							serviceReference.getProperty(
+								_SPA_NAVIGATION_EXCEPTION_SELECTOR_KEY)));
+
+					return bundleContext.getService(serviceReference);
+				}
+
+				@Override
+				public void modifiedService(
+					ServiceReference<Object> serviceReference, Object service) {
+
+					removedService(serviceReference, service);
+
+					addingService(serviceReference);
+				}
+
+				@Override
+				public void removedService(
+					ServiceReference<Object> serviceReference, Object service) {
+
+					_globalNavigationExceptionSelectors.removeAll(
+						StringPlus.asList(
+							serviceReference.getProperty(
+								_SPA_NAVIGATION_EXCEPTION_SELECTOR_KEY)));
+
+					bundleContext.ungetService(serviceReference);
+				}
+
+			});
+	}
+
+	private JSONArray _getPortletsBlacklistJSONArray(long companyId) {
+		return _portletsBlacklistJSONArrays.computeIfAbsent(
+			companyId,
+			companyId2 -> {
+				JSONArray portletsBlacklistJSONArray =
+					_jsonFactory.createJSONArray();
+
+				_portletLocalService.visitPortlets(
+					companyId,
+					portlet -> {
+						if (!portlet.isSinglePageApplication() &&
+							!portlet.isUndeployedPortlet() &&
+							portlet.isActive() && portlet.isReady()) {
+
+							portletsBlacklistJSONArray.put(
+								portlet.getPortletId());
+						}
+					});
+
+				return portletsBlacklistJSONArray;
+			});
+	}
+
+	private SPAConfiguration _getSPAConfiguration(ThemeDisplay themeDisplay) {
+		SPAConfiguration spaConfiguration;
+
+		try {
+			spaConfiguration = _configurationProvider.getCompanyConfiguration(
+				SPAConfiguration.class, themeDisplay.getCompanyId());
+		}
+		catch (ConfigurationException configurationException) {
+			_log.error(configurationException);
+
+			spaConfiguration = _DEFAULT_SPA_CONFIGURATION;
+		}
+
+		return spaConfiguration;
+	}
+
+	private boolean _isClearScreensCache(
+		HttpServletRequest httpServletRequest, HttpSession httpSession) {
+
+		boolean singlePageApplicationClearCache = GetterUtil.getBoolean(
+			httpServletRequest.getAttribute(
+				WebKeys.SINGLE_PAGE_APPLICATION_CLEAR_CACHE));
+
+		if (singlePageApplicationClearCache) {
+			return true;
+		}
+
+		String portletId = httpServletRequest.getParameter("p_p_id");
+
+		if (Validator.isNull(portletId)) {
+			return false;
+		}
+
+		String singlePageApplicationLastPortletId =
+			(String)httpSession.getAttribute(
+				WebKeys.SINGLE_PAGE_APPLICATION_LAST_PORTLET_ID);
+
+		if (Validator.isNotNull(singlePageApplicationLastPortletId) &&
+			!Objects.equals(portletId, singlePageApplicationLastPortletId)) {
+
+			return true;
+		}
+
+		return false;
+	}
+
+	private static final SPAConfiguration _DEFAULT_SPA_CONFIGURATION =
+		ConfigurableUtil.createConfigurable(
+			SPAConfiguration.class, Collections.emptyMap());
+
+	private static final String[] _SPA_DEFAULT_EXCLUDED_PATHS = {
+		"/c/document_library", "/documents", "/image", "/o/cms/download-folder"
+	};
+
+	private static final String _SPA_NAVIGATION_EXCEPTION_SELECTOR_KEY =
+		"javascript.single.page.application.navigation.exception.selector";
+
+	private static final Log _log = LogFactoryUtil.getLog(
+		SPATopHeadJSPDynamicInclude.class);
+
 	@Reference
 	private AbsolutePortalURLBuilderFactory _absolutePortalURLBuilderFactory;
 
 	@Reference
 	private ConfigurationProvider _configurationProvider;
+
+	private List<String> _globalNavigationExceptionSelectors;
 
 	@Reference
 	private JSONFactory _jsonFactory;
@@ -170,10 +440,17 @@ public class SPATopHeadJSPDynamicInclude extends BaseJSPDynamicInclude {
 	@Reference
 	private Language _language;
 
+	private ServiceTracker<Object, Object> _navigationExceptionSelectorTracker;
+
 	@Reference
 	private Portal _portal;
 
 	@Reference
 	private PortletLocalService _portletLocalService;
+
+	private final Map<Long, JSONArray> _portletsBlacklistJSONArrays =
+		new ConcurrentHashMap<>();
+	private String _redirectParamName;
+	private JSONArray _validStatusCodesJSONArray;
 
 }
